software/components/elasticsearch/cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elasticsearch
  labels:
    hostk8s.component: elasticsearch
